--- a/packages/blog-starter-kit/themes/enterprise/styles/index.css
+++ b/packages/blog-starter-kit/themes/enterprise/styles/index.css
@@ -23,7 +23,7 @@
   
 .dark .prose code {
     --tw-bg-opacity: 1;
-    background-color: rgba(36, 41, 46, var(--tw-bg-opacity));
+    background-color: rgba(2, 8, 23, var(--tw-bg-opacity));
     --tw-text-opacity: 1;
     color: rgba(238, 238, 238, var(--tw-text-opacity));
 }
@@ -46,3 +46,7 @@
     background-color: transparent;
     color: #ddd;
 }
+
+.dark html, .dark body {
+    background-color: #020817;
+  }
